Add no result to index pages

--- a/app/views/factory/formula_elements/index.html.erb
+++ b/app/views/factory/formula_elements/index.html.erb
@@ -42,62 +42,70 @@
     </div>
 
     <%= turbo_frame_tag "formula_elements_table" do %>
-      <div class="inline-block min-w-full py-2 align-middle">
-        <table id="formula-elements" class="min-w-full divide-y divide-light-gray-900">
-          <thead>
-            <tr>
-              <th scope="col" class="py-3 text-sm font-semibold text-gray-900 group">
-                <%= sort_link(@q, :id, FormulaElement.human_attribute_name(:id), class: "flex justify-center", data: { turbo_action: "advance"}) %>
-              </th>
-              <th scope="col" class="px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
-                <%= sort_link(@q, :name, FormulaElement.human_attribute_name(:name), class: "flex", data: { turbo_action: "advance"}) %>
-              </th>
-              <th scope="col" class="hidden sm:table-cell px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
-                <%= sort_link(@q, :current_stock, FormulaElement.human_attribute_name(:current_stock), class: "flex justify-end", data: { turbo_action: "advance"}) %>
-              </th>
-              <th scope="col" class="px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
-                <%= sort_link(@q, :stock_level, FormulaElement.human_attribute_name(:stock_level), class: "flex justify-center", data: { turbo_action: "advance"}) %>
-              </th>
-              <th scope="col" class="px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
-                <%= sort_link(@q, :infinite, FormulaElement.human_attribute_name(:infinite), class: "hidden sm:flex justify-center", data: { turbo_action: "advance"}) %>
-              </th>
-            </tr>
-          </thead>
-          <tbody class="divide-y divide-light-gray">
-            <% @formula_elements.each do |formula_element| %>
-              <tr id="<%= dom_id formula_element %>">
-                <td class="whitespace-nowrap px-1 md:px-4 py-3 text-center text-sm text-gray-900">
-                  <%= link_to formula_element.id, factory_formula_element_path(formula_element), data: { turbo_frame: "_top" } %>
-                </td>
-                <td class="whitespace-nowrap py-3 px-1 md:px-4 pr-3 text-sm font-medium text-gray-900">
-                  <%= link_to factory_formula_element_path(formula_element), data: { turbo_frame: "_top" } do %>
-                    <span class="sr-only">Ver materia prima </span><%= formula_element.name %>
-                  <% end %>
-                </td>
-                <td class="hidden sm:table-cell whitespace-nowrap px-1 md:px-4 py-3 text-sm text-gray-500 text-right">
-                  <%= "#{number_with_precision formula_element.current_stock} kg" unless formula_element.infinite? %>
-                </td>
-                <td class="whitespace-nowrap px-1 md:px-4 py-3 text-sm text-gray-500">
-                  <div class="relative w-full bg-light-gray-300 h-4 rounded-md overflow-hidden">
-                    <div
-                      class="absolute h-full rounded-md transition-all flex items-center justify-center text-white font-semibold"
-                      style="width: <%= [formula_element.stock_level, 100].min %>%; background-color: <%= stock_level_color(formula_element.stock_level) %>;">
-                    </div>
-                    <span class="absolute left-0 w-full text-center text-xs">
-                      <%= number_to_percentage(formula_element.stock_level, precision: 0) %>
-                    </span>
-                  </div>
-                </td>
-                <td class="whitespace-nowrap flex justify-center px-1 md:px-4 py-3 text-sm text-gray-500">
-                  <% if formula_element.infinite? %>
-                    <%= heroicon("sun", options: { class: "h-4 w-4 shrink-0 text-green" }) %>
-                  <% end %>
-                </td>
+      <% if @formula_elements.any? %>
+        <div class="inline-block min-w-full py-2 align-middle">
+          <table id="formula-elements" class="min-w-full divide-y divide-light-gray-900">
+            <thead>
+              <tr>
+                <th scope="col" class="py-3 text-sm font-semibold text-gray-900 group">
+                  <%= sort_link(@q, :id, FormulaElement.human_attribute_name(:id), class: "flex justify-center", data: { turbo_action: "advance"}) %>
+                </th>
+                <th scope="col" class="px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                  <%= sort_link(@q, :name, FormulaElement.human_attribute_name(:name), class: "flex", data: { turbo_action: "advance"}) %>
+                </th>
+                <th scope="col" class="hidden sm:table-cell px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                  <%= sort_link(@q, :current_stock, FormulaElement.human_attribute_name(:current_stock), class: "flex justify-end", data: { turbo_action: "advance"}) %>
+                </th>
+                <th scope="col" class="px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                  <%= sort_link(@q, :stock_level, FormulaElement.human_attribute_name(:stock_level), class: "flex justify-center", data: { turbo_action: "advance"}) %>
+                </th>
+                <th scope="col" class="px-1 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                  <%= sort_link(@q, :infinite, FormulaElement.human_attribute_name(:infinite), class: "hidden sm:flex justify-center", data: { turbo_action: "advance"}) %>
+                </th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
+            </thead>
+            <tbody class="divide-y divide-light-gray">
+              <% @formula_elements.each do |formula_element| %>
+                <tr id="<%= dom_id formula_element %>">
+                  <td class="whitespace-nowrap px-1 md:px-4 py-3 text-center text-sm text-gray-900">
+                    <%= link_to formula_element.id, factory_formula_element_path(formula_element), data: { turbo_frame: "_top" } %>
+                  </td>
+                  <td class="whitespace-nowrap py-3 px-1 md:px-4 pr-3 text-sm font-medium text-gray-900">
+                    <%= link_to factory_formula_element_path(formula_element), data: { turbo_frame: "_top" } do %>
+                      <span class="sr-only">Ver materia prima </span><%= formula_element.name %>
+                    <% end %>
+                  </td>
+                  <td class="hidden sm:table-cell whitespace-nowrap px-1 md:px-4 py-3 text-sm text-gray-500 text-right">
+                    <%= "#{number_with_precision formula_element.current_stock} kg" unless formula_element.infinite? %>
+                  </td>
+                  <td class="whitespace-nowrap px-1 md:px-4 py-3 text-sm text-gray-500">
+                    <div class="relative w-full bg-light-gray-300 h-4 rounded-md overflow-hidden">
+                      <div
+                        class="absolute h-full rounded-md transition-all flex items-center justify-center text-white font-semibold"
+                        style="width: <%= [formula_element.stock_level, 100].min %>%; background-color: <%= stock_level_color(formula_element.stock_level) %>;">
+                      </div>
+                      <span class="absolute left-0 w-full text-center text-xs">
+                        <%= number_to_percentage(formula_element.stock_level, precision: 0) %>
+                      </span>
+                    </div>
+                  </td>
+                  <td class="whitespace-nowrap flex justify-center px-1 md:px-4 py-3 text-sm text-gray-500">
+                    <% if formula_element.infinite? %>
+                      <%= heroicon("sun", options: { class: "h-4 w-4 shrink-0 text-green" }) %>
+                    <% end %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      <% else %>
+        <div class="flex items-center justify-center h-96">
+          <p class="px-4 py-6 sm:px-6 text-sm/6 text-light-gray-700 italic">
+            <%= t("messages.no_formula_elements") %>
+          </p>
+        </div>
+      <% end %>
       <%= paginate @formula_elements, total_count: @formula_elements.total_count %>
     <% end %>
   </div>
