--- a/app/views/office/products/_form.html.erb
+++ b/app/views/office/products/_form.html.erb
@@ -4,6 +4,9 @@
   <%= render "common/error_messages", model: product %>
   <%= render "common/forms/simple" do %>
     <div class="col-span-6 md:col-span-3 grid grid-cols-1 gap-x-6 gap-y-8">
+
+      <%= render "common/products/form/cover", form: form, product: product %>
+
       <div>
         <%= form.label :name, class: "block text-sm font-medium leading-6 text-gray-900" %>
         <div class="mt-2">
@@ -18,35 +21,8 @@
         </div>
       </div>
 
-      <div class="grid grid-cols-3 gap-4">
-        <div>
-          <%= form.label :current_stock, class: "block text-sm font-medium leading-6 text-gray-900" %>
-          <div class="mt-2">
-            <%= form.number_field :current_stock, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6" %>
-          </div>
-        </div>
-
-        <div>
-          <%= form.label :min_stock, class: "block text-sm font-medium leading-6 text-gray-900" %>
-          <div class="mt-2">
-            <%= form.number_field :min_stock, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6" %>
-          </div>
-        </div>
-
-        <div>
-          <%= form.label :max_stock, class: "block text-sm font-medium leading-6 text-gray-900" %>
-          <div class="mt-2">
-            <%= form.number_field :max_stock, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6" %>
-          </div>
-        </div>
-      </div>
-
-      <div>
-        <%= form.label :comments, class: "block text-sm font-medium leading-6 text-gray-900" %>
-        <div class="mt-2">
-          <%= form.rich_textarea :comments, rows: 4, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6" %>
-        </div>
-      </div>
+      <%= render "common/products/form/stock", form: form %>
+      <%= render "common/products/form/comments", form: form %>
     </div>
 
     <div class="col-span-6 md:col-span-3 grid grid-cols-1 gap-x-6 gap-y-8">
