--- a/app/views/common/headings/_page.html.erb
+++ b/app/views/common/headings/_page.html.erb
@@ -4,12 +4,12 @@
 
 <div>
   <%= render "common/headings/breadcrumbs", breadcrumbs: breadcrumbs %>
-  <div class="mt-2 md:flex md:items-center md:justify-between">
+  <div class="mt-2 flex flex-col md:flex-row md:items-center md:justify-between">
     <div class="min-w-0 flex-1">
-      <h2 class="text-2xl font-bold leading-10 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight"><%= title %></h2>
+      <h2 class="text-2xl font-bold leading-10 text-gray-900 sm:text-3xl sm:tracking-tight"><%= title %></h2>
     </div>
     <% if actions.any? %>
-      <div class="mt-4 flex flex-shrink-0 md:ml-4 md:mt-0 gap-2">
+      <div class="mt-4 flex flex-shrink-0 md:ml-4 md:mt-0 gap-2 self-end">
         <% actions.each do |action| %>
           <%= button_to action[:label], action[:path], method: action[:method], data: action[:data], class: action[:class] || "btn-default" %>
         <% end %>
