--- a/app/views/factory/formulas/_formula_item_fields.html.erb
+++ b/app/views/factory/formulas/_formula_item_fields.html.erb
@@ -13,7 +13,7 @@
       input_name: ff.field_name(:formula_element_id),
       input_value: formula_item.formula_element_id,
       search_value: formula_item&.formula_element&.name,
-      input_classes: "text-xs #{'ring-red' if formula_item.errors.any?}",
+      input_classes: "text-xs/6 #{'ring-red' if formula_item.errors.any?}",
       url: factory_formula_elements_path,
     ) %>
 
