--- a/app/views/factory/making_orders/_making_order_item_fields.html.erb
+++ b/app/views/factory/making_orders/_making_order_item_fields.html.erb
@@ -13,7 +13,7 @@
       input_name: ff.field_name(:product_id),
       input_value: making_order_item.product_id,
       search_value: making_order_item&.product_name,
-      input_classes: making_order_item.errors.any? ? "ring-red text-xs" : "text-xs",
+      input_classes: making_order_item.errors.any? ? "ring-red text-xs/6" : "text-xs/6",
       url: factory_products_path,
     ) %>
     <div>
@@ -23,7 +23,7 @@
         min: 1,
         step: 1,
         disabled: marked_for_destruction,
-        class: "block w-full rounded-md border-0 py-1.5 text-xs text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:leading-6 #{ 'ring-red' if making_order_item.errors.any? }",
+        class: "block w-full rounded-md border-0 py-1.5 text-xs/6 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:leading-6 #{ 'ring-red' if making_order_item.errors.any? }",
       ) %>
       <%= ff.hidden_field(
         :_destroy,
