Update logo, landing page, enable PWA and capitalize COMMAN

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -37,8 +37,8 @@
 
         <!-- Sidebar content -->
         <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-blue px-6 pb-2">
-          <div class="flex h-16 shrink-0 items-center">
-            <%= image_tag("logo.png", class: "h-8 w-auto", alt: "Comman") %>
+          <div class="flex mt-6 shrink-0 items-center">
+            <%= image_tag("logo-dark.png", class: "h-16 w-auto", alt: "COMMAN") %>
           </div>
           <nav class="flex flex-1 flex-col">
             <ul role="list" class="flex flex-1 flex-col gap-y-7">
@@ -76,8 +76,8 @@
   <div class="hidden xl:fixed xl:inset-y-0 xl:z-50 xl:flex xl:w-72 xl:flex-col">
     <!-- Sidebar component, swap this element with another sidebar if you like -->
     <div class="flex grow flex-col gap-y-5 overflow-y-auto bg-blue px-6">
-      <div class="flex h-16 shrink-0 items-center">
-        <%= image_tag("logo.png", class: "h-8 w-auto", alt: "Comman") %>
+      <div class="flex mt-6 shrink-0 items-center">
+        <%= image_tag("logo-dark.png", class: "h-16 w-auto", alt: "COMMAN") %>
       </div>
       <nav class="flex flex-1 flex-col">
         <ul role="list" class="flex flex-1 flex-col gap-y-7">
@@ -136,7 +136,7 @@
         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
       </svg>
     </button>
-    <div class="text-sm font-semibold leading-6 text-white">comman</div>
+    <div class="text-sm font-semibold leading-6 text-white">COMMAN</div>
     <div class="hidden flex-1 md:ml-6 md:block">
       <div class="flex space-x-4">
         <% navigation_items.each do |item| %>
