--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="h-full bg-white">
   <head>
-    <title><%= content_for(:title) || "Comman" %></title>
+    <title><%= content_for(:title) || "COMMAN" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
@@ -10,11 +10,10 @@
     <%= yield :head %>
 
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
-    <%#= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
+    <%= tag.link rel: "manifest", href: pwa_manifest_path(format: :json) %>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <%= render 'application/favicon' %>
+
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <style>@page { size: A4 }</style>
 
@@ -27,7 +26,7 @@
       <% if authenticated? %>
         <%= render 'application/sidebar' %>
       <% end %>
-      <main class="py-10 <%= 'xl:pl-72' if authenticated? %>">
+      <main class="py-10 <%= "xl:pl-72" if authenticated? %>">
         <div class="px-4 sm:px-6 xl:px-8">
           <%= render 'common/flash' %>
           <%= yield %>
