--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,22 +1,23 @@
 {
-  "name": "Comman",
+  "name": "COMMAN",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "<%= asset_path 'favicon/web-app-manifest-192x192.png' %>",
+      "sizes": "192x192",
       "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "maskable"
     },
     {
-      "src": "/icon.png",
-      "type": "image/png",
+      "src": "<%= asset_path 'favicon/web-app-manifest-512x512.png' %>",
       "sizes": "512x512",
+      "type": "image/png",
       "purpose": "maskable"
     }
   ],
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
-  "description": "Comman.",
-  "theme_color": "red",
-  "background_color": "red"
+  "description": "Company Manager",
+  "theme_color": "#fafafa",
+  "background_color": "#60d394"
 }
